@@ -5,6 +5,7 @@ Implemented smalltalk instance resolution enhancement suggested by Jose Antonio 
 (We now use a thread local to cache instance, rather than lookup current thread.) 
 Backed out enhancement, however it did help reveal a logic error. We need to use current instance
 (this) class classloader to get Smalltalk instance.
+Refactored test to make it easier to change the way Smalltalk instance is fetched.
 
 
 11/01/2011 Changes
